2004-01-20  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_smasi.c: fixed decode_binary_data() which now behaves the 
      way expected according to the specs. Binary MOs are *NOT* encoded the
      same way like MTs. The SM/ASI SMSC sends raw data bytes in the body
      and udh fields and only escapes specific bytes that are reserved as
      protocol delimiters. This fixes binary MO receives.

2004-01-18  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml: added missing 'field-source' and 
      'field-boxc-id' in examples within DLR database field configuration 
      section.

2004-01-15  Alexander Malysh  <a.malysh@centrium.de>
    * gw/bb_store.c: got rid of unused 'Counter *msg_id'. We use UUID's now.

2004-01-15  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/log.c: close syslog when exit. removed 'inline' from declaration 
      of 'gw_panic_output' because va_args functions can't be inlined.

2004-01-14  Alexander Malysh  <a.malysh@centrium.de>
    * doc/userguide/userguide.xml, gw/smsc/smsc_at.[ch], gwlib/cfg.def: applied
      at-merging.patch. This patch adds propperly reconnect for modem device. 
      Fixes a few race conditions and adds 2 new config options 
      'max-error-count', 'reset-string'. These options adds facility for hard 
      reset of the modem when modem crashed. Additionaly a few fixes here and 
      there.
      Msg-Id: <200401121508.00508.a.malysh@centrium.de>.

2004-01-12  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/http.c: fixed memory and mutex leak. Thanks a lot to:
      Nuno Ferreira <nuno.ferreira@graycell.biz> for provided patch.
      Msg-Id: <1073928970.2849.4.camel@taz.graycell.biz>

2004-01-10  Alexander Malysh  <a.malysh@centrium.de>
    * gw-config.h.in, configure[.in], gw/dlr_[mysql|sdb].c, 
      doc/userguide/userguide.xml: Applied patch that removes '--with-dlr' 
      configure option and replace:
          --with-mysql --> --with-mysql-dir